<resources>
    <string name="app_name">Liste</string>
    <string name="menu_action_1">ajouter</string>
    <string name="ajouter">Ajouter</string>
    <string name="liste">Liste</string>
    <string name="priorit_e">Prioritée</string>
    <string name="basse">basse</string>
    <string name="moyenne">moyenne</string>
    <string name="haute">haute</string>

    <string name="option_police">option_police</string>
    <string name="option_prio">option_prio</string>
</resources>