<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="415dp"
        android:layout_height="727dp"
        android:layout_margin="30dp"
        android:orientation="vertical"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.24000001"
        tools:visibility="visible">

        <EditText
            android:id="@+id/listeTexte"
            android:layout_width="404dp"
            android:layout_height="45dp"
            android:hint="item a ajouter"
            android:ems="10"
            android:inputType="textPersonName" />


        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:text="@string/priorit_e"
            android:textSize="24sp" />


        <RadioGroup
            android:id="@+id/radio"
            android:layout_width="match_parent"
            android:layout_height="47dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radioButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.33"
                android:background="@color/colorJaune"
                android:text="@string/basse" />

            <RadioButton
                android:id="@+id/radioButton2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.33"
                android:background="@color/colorOrange"
                android:text="@string/moyenne" />

            <RadioButton
                android:id="@+id/radioButton3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.33"
                android:background="@color/colorRouge"
                android:text="@string/haute" />

        </RadioGroup>

        <Button
            android:id="@+id/buttonAjouter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ajouter" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>